# maas

./: .babelrc  .bzrignore  .coveragerc  .ctags  .eslintignore  .eslintrc.js  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .golangci.yaml  .launchpad.yaml  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  Dockerfile  HACKING.rst  HACKING.txt  INSTALL.txt  LICENCE  LICENSE  MANIFEST.in  Makefile  README  README.rst  README.txt  SECURITY.md  boot-asset-architecture-review.md  bootstrap-buildout.py  buildout.cfg  conftest.py  ez_setup.py  go-style-guide.md  jest.config.js  maas-client.html  maasdb.dump  monorepoplan.md  package.json  pyproject.toml  (+9 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
acceptance/: README  (+4 more)
external-drivers/maas-power-driver-amt/: README.md  pyproject.toml
external-drivers/maas-power-driver-amt/snap/: snapcraft.yaml
external-drivers/maas-power-driver-amt/snap/local/tree/usr/share/maas/pebble/layers/: 001-amt-driver.yaml
external-drivers/maas-power-driver-amt/src/maas_power_driver_amt/: __init__.py  driver.py  metadata.json  server.py
external-drivers/maas-power-driver-amt/tests/: test_driver.py  test_server.py
external-drivers/maas-power-driver-apc/: README.md  pyproject.toml
external-drivers/maas-power-driver-apc/snap/: snapcraft.yaml
external-drivers/maas-power-driver-apc/snap/local/tree/usr/share/maas/pebble/layers/: 001-apc-driver.yaml
external-drivers/maas-power-driver-apc/src/maas_power_driver_apc/: __init__.py  driver.py  metadata.json  server.py
external-drivers/maas-power-driver-apc/tests/: test_driver.py  test_server.py
external-drivers/maas-power-driver-dli/: README.md  pyproject.toml
external-drivers/maas-power-driver-dli/snap/: snapcraft.yaml
external-drivers/maas-power-driver-dli/src/maas_power_driver_dli/: __init__.py  driver.py  metadata.json  server.py
external-drivers/maas-power-driver-dli/tests/: test_driver.py  test_server.py
external-drivers/maas-power-driver-eaton/: README.md  pyproject.toml
external-drivers/maas-power-driver-eaton/snap/: snapcraft.yaml
external-drivers/maas-power-driver-eaton/src/maas_power_driver_eaton/: __init__.py  driver.py  metadata.json  server.py
external-drivers/maas-power-driver-eaton/tests/: test_driver.py  test_server.py
external-drivers/maas-power-driver-hmc/: README.md  pyproject.toml
external-drivers/maas-power-driver-hmc/snap/: snapcraft.yaml
external-drivers/maas-power-driver-hmc/src/maas_power_driver_hmc/: __init__.py  driver.py  metadata.json  server.py
external-drivers/maas-power-driver-hmc/tests/: test_driver.py  test_server.py
external-drivers/maas-power-driver-hmcz/: README.md  pyproject.toml
external-drivers/maas-power-driver-hmcz/snap/: snapcraft.yaml
external-drivers/maas-power-driver-hmcz/src/maas_power_driver_hmcz/: __init__.py  driver.py  metadata.json  server.py
external-drivers/maas-power-driver-hmcz/tests/: test_driver.py  test_server.py
external-drivers/maas-power-driver-moonshot/: README.md  pyproject.toml
external-drivers/maas-power-driver-moonshot/snap/: snapcraft.yaml
external-drivers/maas-power-driver-moonshot/src/maas_power_driver_moonshot/: __init__.py  driver.py  metadata.json  server.py
external-drivers/maas-power-driver-moonshot/tests/: test_driver.py  test_server.py
external-drivers/maas-power-driver-mscm/: README.md  pyproject.toml
external-drivers/maas-power-driver-mscm/snap/: snapcraft.yaml
external-drivers/maas-power-driver-mscm/src/maas_power_driver_mscm/: __init__.py  driver.py  metadata.json  server.py
external-drivers/maas-power-driver-mscm/tests/: test_driver.py  test_server.py
external-drivers/maas-power-driver-msftocs/: README.md  pyproject.toml
external-drivers/maas-power-driver-msftocs/snap/: snapcraft.yaml
external-drivers/maas-power-driver-msftocs/src/maas_power_driver_msftocs/: __init__.py  driver.py  metadata.json  server.py
external-drivers/maas-power-driver-msftocs/tests/: test_driver.py  test_server.py
external-drivers/maas-power-driver-recs/: README.md  pyproject.toml
external-drivers/maas-power-driver-recs/snap/: snapcraft.yaml
external-drivers/maas-power-driver-recs/src/maas_power_driver_recs/: __init__.py  driver.py  metadata.json  server.py
external-drivers/maas-power-driver-recs/tests/: __init__.py  test_driver.py  test_server.py
external-drivers/maas-power-driver-redfish/: README.md  pyproject.toml
external-drivers/maas-power-driver-redfish/snap/: snapcraft.yaml
external-drivers/maas-power-driver-redfish/src/maas_power_driver_redfish/: __init__.py  driver.py  metadata.json  server.py
external-drivers/maas-power-driver-redfish/tests/: test_driver.py  test_server.py
external-drivers/maas-power-driver-seamicro/: README.md  pyproject.toml
external-drivers/maas-power-driver-seamicro/snap/: snapcraft.yaml
external-drivers/maas-power-driver-seamicro/src/maas_power_driver_seamicro/: __init__.py  driver.py  metadata.json  server.py
external-drivers/maas-power-driver-seamicro/tests/: test_driver.py  test_server.py
external-drivers/maas-power-driver-ucsm/: README.md  pyproject.toml
external-drivers/maas-power-driver-ucsm/snap/: snapcraft.yaml
external-drivers/maas-power-driver-ucsm/src/maas_power_driver_ucsm/: __init__.py  driver.py  metadata.json  server.py
external-drivers/maas-power-driver-ucsm/tests/: test_driver.py  test_server.py
external-drivers/maas-power-driver-vmware/: README.md  pyproject.toml
external-drivers/maas-power-driver-vmware/snap/: snapcraft.yaml
external-drivers/maas-power-driver-vmware/src/maas_power_driver_vmware/: __init__.py  driver.py  metadata.json  server.py
external-drivers/maas-power-driver-vmware/tests/: test_driver.py  test_server.py
external-drivers/maas-power-driver-wedge/: README.md  pyproject.toml
external-drivers/maas-power-driver-wedge/snap/: snapcraft.yaml
external-drivers/maas-power-driver-wedge/src/maas_power_driver_wedge/: __init__.py  driver.py  metadata.json  server.py
external-drivers/maas-power-driver-wedge/tests/: test_driver.py  test_server.py
(+10882 files in other folders)
