[build-system]
build-backend = "setuptools.build_meta"
requires = [
]

[tool.black]
line-length = 79
exclude = """
/.egg
/.git
/.mypy_cache
/.ve
/build
/dist
/parts
/snap
/src/maasui
/src/maas-offline-docs
"""

[tool.isort]
from_first = false
force_sort_within_sections = true
profile = "black"
line_length = 79
known_first_party = """
apiclient
maasapiserver
maascli
maasserver
maastesting
metadataserver
provisioningserver
snippets
"""
order_by_type = false

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503", "W504"]
exclude = [
  "src/*/migrations/*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = "error::BytesWarning"
testpaths = [
  "src/tests",
]
