[metadata]
name = maas
version = 3.0.2
description = Metal As A Service
long_description = file: README.rst
url = https://maas.io/
license = AGPLv3
author = MAAS Developers
author_email = maas-devel@lists.launchpad.net
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  License :: OSI Approved :: GNU Affero General Public License v3
  Operating System :: POSIX :: Linux
  Programming Language :: JavaScript
  Programming Language :: Python :: 3
  Topic :: System :: Systems Administration

[options]
include_package_data = true
packages = find:
package_dir =
  = src

[options.entry_points]
console_scripts =
  maas = maascli:main
  maas-common = provisioningserver.rack_script:run
  maas-power = provisioningserver.power_driver_command:run
  maas-rack = provisioningserver.rack_script:run
  maas-region = maasserver.region_script:run
  rackd = provisioningserver.server:run
  regiond = maasserver.server:run
  test.region = maastesting.scripts:run_region
  test.region.legacy = maastesting.scripts:run_region_legacy
  test.rack = maastesting.scripts:run_rack
  test.parallel = maastesting.scripts:run_parallel

[options.packages.find]
where = src
exclude =
  *.testing
  *.tests
  maastesting
  maastesting.*

[options.data_files]
/etc/maas =
  etc/maas/drivers.yaml
/usr/share/maas =
  contrib/maas-http.conf
/etc/maas/preseeds =
  contrib/preseeds_v2/commissioning
  contrib/preseeds_v2/enlist
  contrib/preseeds_v2/curtin
  contrib/preseeds_v2/curtin_userdata
  contrib/preseeds_v2/curtin_userdata_centos
  contrib/preseeds_v2/curtin_userdata_custom
  contrib/preseeds_v2/curtin_userdata_suse
  contrib/preseeds_v2/curtin_userdata_windows
/usr/bin =
  scripts/maas-generate-winrm-cert
  scripts/uec2roottar
/usr/sbin =
  scripts/maas-dhcp-helper
/usr/lib/maas =
  scripts/dhcp-monitor
  scripts/beacon-monitor
  scripts/network-monitor
  scripts/maas-delete-file
  scripts/maas-test-enlistment
  scripts/maas-write-file
  scripts/unverified-ssh

[globals]
lint_files =
  setup.py
  src/apiclient
  src/maascli
  src/maasserver
  src/maastesting
  src/metadataserver
  src/provisioningserver
  utilities/release-upload
deps_lint =
  black == 20.8b1
  flake8 == 3.9.0
  isort == 5.7.0
  click == 8.0.2

[flake8]
ignore = E203, E266, E501, W503, W504
exclude =
  src/*/migrations/*

[tox:tox]
skipsdist = True
envlist = format,lint

[testenv:format]
deps = {[globals]deps_lint}
commands =
  isort {[globals]lint_files}
  black -q {[globals]lint_files}

[testenv:lint]
deps = {[globals]deps_lint}
commands =
  isort --check-only --diff {[globals]lint_files}
  black --check {[globals]lint_files}
  flake8 {[globals]lint_files}
