[metadata]
name = maas
version = 3.5.0b1
description = Metal As A Service
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://maas.io/
author = MAAS Developers
author_email = maas-devel@lists.launchpad.net
license = AGPL-3.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: JavaScript
    Programming Language :: Python :: 3
    Topic :: System :: Systems Administration

[options]
packages = find:
include_package_data = true
package_dir =
    = src

[options.packages.find]
where = src
exclude =
    *.testing
    *.tests
include =
    apiclient*
    maasapiserver*
    maascli*
    maasserver*
    maastemporalworker*
    metadataserver*
    provisioningserver*

[options.entry_points]
console_scripts =
    maas = maascli:main
    maas-apiserver = maasapiserver.main:run
    maas-common = provisioningserver.rack_script:run
    maas-power = provisioningserver.power_driver_command:run
    maas-rack = provisioningserver.rack_script:run
    maas-region = maasserver.region_script:run
    maas-sampledata = maasserver.testing.sampledata.main:main
    maas-temporal-worker = maastemporalworker.temporal_script:run
    rackd = provisioningserver.server:run
    regiond = maasserver.server:run
    test.parallel = maastesting.scripts:run_parallel
    test.rack = maastesting.scripts:run_rack
    test.region = maastesting.scripts:run_region
    test.region.legacy = maastesting.scripts:run_region_legacy
pytest11 =
    maas-database = maastesting.pytest.database
    maas-django = maastesting.pytest.django
    maas-seeds = maastesting.pytest.seeds
    maas-environment = maastesting.pytest.environment
    maas-perftest = maastesting.pytest.perftest
    maas-sqlalchemy = maastesting.pytest.sqlalchemy

[options.extras_require]
testing =
    aioresponses==0.7.6
    fixtures==4.0.0
    httpx==0.24.1
    hypothesis==6.46.9
    ipdb==0.13.9
    junitxml==0.7
    postgresfixture==0.4.2
    pytest==7.1.2
    pytest-asyncio==0.21.0
    pytest-mock==3.7.0
    pytest-xdist==2.5.0
    python-subunit==1.4.0
    testresources==2.0.1
    testscenarios==0.5.0
    testtools==2.5.0
    typing-extensions>=4.6.0
