[project]
name = "maas-power-driver-mscm"
version = "1.0.0"
description = "MAAS power driver for IBM MSCM"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mscm-driver = "maas_power_driver_mscm.server:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
